--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,16 @@
 Package: prevR
 Type: Package
 Title: Estimating regional trends of a prevalence from a DHS
-Version: 2.4
+Version: 2.6
 Date: 2013-08-19
-Author: Joseph Larmarange - CEPED (Universite Paris Descartes Ined IRD) IRD, with fundings from ANRS and IRD, and technical support from LYSIS (info@lysis-consultants.fr)
+Author: Joseph Larmarange - IRD CEPED
 Maintainer: Joseph Larmarange <joseph.larmarange@ird.fr>
+Acknowledgement: funding from ANRS and IRD, and technical support from LYSIS (info@lysis-consultants.fr)
 Description: This package performs spatial estimation of a prevalence surface or a relative risks surface, using data from a Demographic and Health Survey (DHS) or an analog survey.
 License: CeCILL
 URL: http://www.ceped.org/prevR, http://joseph.larmarange.net/prevR
 LazyLoad: yes
 LazyData: yes
-Depends: R (>= 2.10), foreign, methods, sp, gstat, maptools, fields, GenKern, rgdal (>= 0.7-4), geoR, tcltk
+Depends: R (>= 2.10), methods, sp, gstat, GenKern, rgdal (>= 0.7-4), fields
+Suggests: foreign, tcltk, geoR, maptools
 Encoding: UTF-8
