--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: prevR
 Type: Package
 Title: Estimating regional trends of a prevalence from a DHS
-Version: 2.6
-Date: 2013-08-19
+Version: 2.7
+Date: 2013-08-20
 Author: Joseph Larmarange - IRD CEPED
 Maintainer: Joseph Larmarange <joseph.larmarange@ird.fr>
-Acknowledgement: funding from ANRS and IRD, and technical support from LYSIS (info@lysis-consultants.fr)
+Acknowledgements: funding from ANRS and IRD, and technical support from LYSIS (info@lysis-consultants.fr)
 Description: This package performs spatial estimation of a prevalence surface or a relative risks surface, using data from a Demographic and Health Survey (DHS) or an analog survey.
 License: CeCILL
 URL: http://www.ceped.org/prevR, http://joseph.larmarange.net/prevR
