--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-prevR/
-prevR.Rcheck/
-.Rhistory
-
-*.zip
-*.tar.gz
-
 ############
 ## Windows
 ############
@@ -15,3 +8,4 @@ Thumbs.db
 # Folder config file
 Desktop.ini
 
+.Rproj.user
