We don't need to track .Rhistory

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 ############
 ## Windows
 ############
-
 # Windows image file caches
 Thumbs.db
-
 # Folder config file
 Desktop.ini
-
 .Rproj.user
+.Rdata
+.Rhistory
