--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: prevR
 Type: Package
-Title: Estimating regional trends of a prevalence from a DHS
+Title: Estimating Regional Trends of a Prevalence from a DHS
 Version: 3.0
 Date: 2015-05-18
 Author: Joseph Larmarange - IRD CEPED
 Maintainer: Joseph Larmarange <joseph.larmarange@ird.fr>
 Acknowledgements: funding from ANRS and IRD, and technical support from LYSIS
     (info@lysis-consultants.fr)
-Description: This package performs spatial estimation of a prevalence surface
+Description: Spatial estimation of a prevalence surface
     or a relative risks surface, using data from a Demographic and Health
     Survey (DHS) or an analog survey.
 License: CeCILL
@@ -52,6 +52,5 @@ Collate:
     'xyz2dataframe.prevR.r'
     'init.exp.model.variogram.r'
     'eyefit.prevR.r'
-    'idw.prevR.r'
     'krige.prevR.r'
     'kde.prevR.r'
