--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,3 +25,16 @@ exportMethods(export)
 exportMethods(kde)
 exportMethods(plot)
 exportMethods(rings)
+import(rgdal)
+import(sp)
+importFrom(GenKern,KernSur)
+importFrom(fields,rdist)
+importFrom(fields,rdist.earth)
+importFrom(gstat,as.vgm.variomodel)
+importFrom(gstat,fit.variogram)
+importFrom(gstat,idw)
+importFrom(gstat,krige)
+importFrom(gstat,vgm)
+importFrom(methods,setClass)
+importFrom(methods,setGeneric)
+importFrom(methods,setMethod)
