--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(NA.outside.SpatialPolygons)
 export(Noptim)
 export(as.prevR)
 export(create.boundary)
+export(direct.label.prevR)
 export(import.dhs)
 export(is.prevR)
 export(point.in.SpatialPolygons)
@@ -18,6 +19,9 @@ export(prevR.colors.qgis.pal)
 export(prevR.colors.red)
 export(prevR.colors.red.inverse)
 export(prevR.demo.pal)
+export(quick.prevR)
+export(theme_prevR)
+export(theme_prevR_light)
 export(xyz2dataframe)
 exportClasses(prevR)
 exportMethods(as.SpatialGrid)
