directly require ggplot2 and directlabels

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(NA.outside.SpatialPolygons)
 export(Noptim)
 export(as.prevR)
 export(create.boundary)
-export(direct.label.prevR)
+export(direct.label_prevR)
 export(import.dhs)
 export(is.prevR)
 export(point.in.SpatialPolygons)
@@ -30,6 +30,8 @@ exportMethods(export)
 exportMethods(kde)
 exportMethods(plot)
 exportMethods(rings)
+import(directlabels)
+import(ggplot2)
 import(rgdal)
 import(sp)
 importFrom(GenKern,KernSur)
