--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,15 +21,15 @@ Depends:
     gstat,
     GenKern,
     rgdal (>= 0.7-4),
-    fields
+    fields,
+    ggplot2,
+    directlabels
 Suggests:
     foreign,
     tcltk,
     geoR,
     maptools,
-    ggplot2,
-    grid,
-    directlabels
+    grid
 Encoding: UTF-8
 Collate:
     'prevR-package.r'
@@ -59,5 +59,5 @@ Collate:
     'kde.prevR.r'
     'Noptim.r'
     'theme_prevR.r'
-    'direct.label.prevR.r'
+    'direct.label_prevR.r'
     'quick.prevR.r'
