--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,11 +37,18 @@ import(sp)
 importFrom(GenKern,KernSur)
 importFrom(fields,rdist)
 importFrom(fields,rdist.earth)
+importFrom(foreign,read.dbf)
+importFrom(foreign,read.spss)
+importFrom(foreign,write.dbf)
+importFrom(grid,unit)
 importFrom(gstat,as.vgm.variomodel)
 importFrom(gstat,fit.variogram)
 importFrom(gstat,idw)
 importFrom(gstat,krige)
+importFrom(gstat,variogram)
 importFrom(gstat,vgm)
+importFrom(maptools,writePointsShape)
+importFrom(maptools,writePolyShape)
 importFrom(methods,setClass)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
