--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: prevR
 Type: Package
 Title: Estimating Regional Trends of a Prevalence from a DHS
-Version: 3.2
-Date: 2016-02-19
+Version: 3.3
+Date: 2016-02-23
 Author: Joseph Larmarange - IRD CEPED
 Maintainer: Joseph Larmarange <joseph.larmarange@ird.fr>
 Acknowledgements: funding from ANRS and IRD, and technical support from LYSIS
@@ -16,7 +16,6 @@ LazyLoad: yes
 LazyData: yes
 Depends:
     R (>= 2.10),
-    methods,
     sp,
     rgdal (>= 0.7-4),
     ggplot2,
@@ -24,10 +23,10 @@ Depends:
 Imports:
     GenKern,
     fields,
-    grid,
     gstat,
     foreign,
-    maptools
+    maptools,
+    methods
 Suggests:
     tcltk,
     geoR
