--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,16 @@ importFrom(fields,rdist.earth)
 importFrom(foreign,read.dbf)
 importFrom(foreign,read.spss)
 importFrom(foreign,write.dbf)
+importFrom(grDevices,col2rgb)
+importFrom(grDevices,dev.new)
+importFrom(grDevices,gray)
+importFrom(grDevices,hsv)
+importFrom(graphics,legend)
+importFrom(graphics,points)
+importFrom(graphics,rect)
+importFrom(graphics,sunflowerplot)
+importFrom(graphics,text)
+importFrom(graphics,title)
 importFrom(gstat,as.vgm.variomodel)
 importFrom(gstat,fit.variogram)
 importFrom(gstat,idw)
@@ -48,6 +58,23 @@ importFrom(gstat,variogram)
 importFrom(gstat,vgm)
 importFrom(maptools,writePointsShape)
 importFrom(maptools,writePolyShape)
+importFrom(methods,"slot<-")
+importFrom(methods,as)
+importFrom(methods,is)
+importFrom(methods,new)
 importFrom(methods,setClass)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
+importFrom(methods,slot)
+importFrom(methods,slotNames)
+importFrom(stats,na.omit)
+importFrom(stats,optim)
+importFrom(stats,quantile)
+importFrom(utils,alarm)
+importFrom(utils,de)
+importFrom(utils,edit)
+importFrom(utils,menu)
+importFrom(utils,select.list)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
+importFrom(utils,write.table)
