--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ LazyData: yes
 Depends:
     R (>= 2.10),
     sp,
-    rgdal (>= 0.7-4),
+    rgdal (>= 0.7),
     ggplot2,
     directlabels
 Imports:
