--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,16 +2,18 @@ Package: prevR
 Type: Package
 Title: Estimating Regional Trends of a Prevalence from a DHS
 Version: 3.3.0.9000
-Date: 2016-02-23
-Author: Joseph Larmarange - IRD CEPED
 Maintainer: Joseph Larmarange <joseph.larmarange@ird.fr>
+Authors@R: c(
+  person("Joseph", "Larmarange", email = "joseph.larmarange@ird.fr", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7097-700X"))
+  )
 Acknowledgements: funding from ANRS and IRD, and technical support from LYSIS
     (info@lysis-consultants.fr)
 Description: Spatial estimation of a prevalence surface
     or a relative risks surface, using data from a Demographic and Health
     Survey (DHS) or an analog survey.
 License: CeCILL
-URL: http://www.ceped.org/prevR, http://joseph.larmarange.net/prevR
+URL: http://larmarange.github.io/prevR/
+BugReports: https://github.com/larmarange/prevR/issues
 LazyLoad: yes
 LazyData: yes
 Depends:
