--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: prevR
 Type: Package
-Title: Estimating Regional Trends of a Prevalence from a DHS and similar surveys
+Title: Estimating Regional Trends of a Prevalence from a DHS and Similar Surveys
 Version: 3.4.0.9000
 Maintainer: Joseph Larmarange <joseph.larmarange@ird.fr>
 Authors@R: c(
