--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -44,9 +44,8 @@ reference:
   contents:
   - '`prevR.colors`'
   - '`theme_prevR`'
-  - '`as.SpatialGrid,prevR-method`'
-  - '`NA.outside.SpatialPolygons`'
+  - '`make.grid.prevR`'
+  - '`st_filter_prevR`'
   - '`direct.label_prevR`'
-  - '`point.in.SpatialPolygons`'
   - '`TMWorldBorders`'
   - '`xyz2dataframe`'
