--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,10 +48,25 @@ importFrom(ggplot2,element_blank)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_grey)
 importFrom(ggplot2,unit)
+importFrom(grDevices,col2rgb)
+importFrom(grDevices,dev.new)
+importFrom(grDevices,gray)
+importFrom(grDevices,hsv)
+importFrom(graphics,legend)
+importFrom(graphics,points)
+importFrom(graphics,rect)
+importFrom(graphics,sunflowerplot)
+importFrom(graphics,text)
+importFrom(graphics,title)
 importFrom(gstat,fit.variogram)
 importFrom(gstat,idw)
 importFrom(gstat,variogram)
 importFrom(gstat,vgm)
+importFrom(methods,`slot<-`)
+importFrom(methods,new)
+importFrom(methods,show)
+importFrom(methods,slot)
+importFrom(methods,slotNames)
 importFrom(sf,st_as_s2)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_bbox)
@@ -65,4 +80,15 @@ importFrom(sf,st_sfc)
 importFrom(sf,st_transform)
 importFrom(sf,st_write)
 importFrom(stars,st_rasterize)
+importFrom(stats,na.omit)
+importFrom(stats,optim)
+importFrom(stats,quantile)
+importFrom(utils,alarm)
+importFrom(utils,de)
+importFrom(utils,edit)
+importFrom(utils,menu)
+importFrom(utils,select.list)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
+importFrom(utils,write.table)
 importMethodsFrom(gstat,krige)
