--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ importFrom(gstat,idw)
 importFrom(gstat,variogram)
 importFrom(gstat,vgm)
 importFrom(methods,`slot<-`)
+importFrom(methods,as)
 importFrom(methods,new)
 importFrom(methods,show)
 importFrom(methods,slot)
