--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,12 +1,14 @@
 url: https://larmarange.github.io/prevR/
+template:
+  bootstrap: 5
+
 development:
   mode: auto
-template:
-  params:
-    bootswatch: flatly
+
 authors:
   Joseph Larmarange:
     href: "http://joseph.larmarange.net/"
+
 reference:
 - title: Data imort
   desc:  Functions to create a prevR object and to import data
